fix mobile layout overflow

--- a/css/layout.css
+++ b/css/layout.css
@@ -28,3 +28,10 @@ main {
   padding-top: 2em;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 60em) {
+  main {
+    width: 100%;
+    padding-top: 1em;
+  }
+}
